--- a/admin/views/search.ejs
+++ b/admin/views/search.ejs
@@ -53,7 +53,10 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <input type="text" placeholder="이름 또는 번호 검색" class="searchInput">
+            <form action="/admin/reservation_manage/search" method="get" style="display: flex;justify-content: space-between; min-width: 50px;">
+                <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnterTablet(event)">
+                <input type="submit" value="검색">
+            </form>
         </div>        
         </div>
         <div class="menu_bar">
@@ -116,7 +119,7 @@
                         </li>
                     <% } %>
                 </ul>                
-              </div>
+            </div>
           </div>
         </div>
     </div>
