--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -94,9 +94,6 @@ tbody{
   border: 1px solid #000;
   border-radius: 4px;
 }
-
-
-
 /*PC*/
 @media all and (min-width:1024px) { 
     .manage_main{
@@ -639,6 +636,31 @@ tbody{
       }
       .btn.cancel{
         background: #EE4C69;
+      }
+      .sale_table{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        align-self: stretch;
+      }
+      .sale_search{
+        display: flex;
+        padding: 12px 16px;
+        align-items: center;
+        gap: 16px;
+        align-self: stretch;
+        background: #E9EAEC;
+      }
+      .sale_search_text{
+        color: #000;
+        text-align: center;
+        font-variant-numeric: lining-nums tabular-nums;
+        font-family: DM Sans;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 140%; /* 22.4px */
+        text-transform: capitalize;
       }
   }
   /*-----------------------------PC end------------------------------*/
