--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -15,6 +15,7 @@ textarea{
   resize: none;
   outline: none;
 }
+table{border-collapse: collapse;}
 thead{
   width: 100%;
   height: 50px;
@@ -37,10 +38,9 @@ tbody{
   display: flex;
   padding: 12px 8px;
   align-items: center;
-  gap: 10px;
   align-self: stretch;
   background: #FFF;
-  border-top: 2px solid #E9EAEC;
+
   border-right: 2px solid #E9EAEC;
   border-left: 2px solid #E9EAEC;
 }
@@ -323,9 +323,10 @@ tbody{
       }
       .row_time{
         display: flex;
-        padding: 0px 8px;
+        padding: 0px 37px;
         background: #fff;
-        border: 2px solid #E9EAEC;
+        border-left: 2px solid #E9EAEC;
+        border-right: 2px solid #E9EAEC;
       }
       .table_content .row_time .row_time_text{
         display: flex;
@@ -350,16 +351,9 @@ tbody{
         max-height: 45px;
         padding: 5px 8px;
         align-items: center;
-        gap: 10px;
         flex: 1 0 0;
         align-self: stretch;
         border: 2px solid #E9EAEC;
-      }
-      .row.a{       
-        background: #FFF;
-      }
-      .row.b{
-        background: #E9EAEC;
       }
       .row .row_text{
         color: #000;
@@ -910,12 +904,7 @@ tbody{
       align-items: center;
       gap: 10px;
       align-self: stretch;
-    }
-    .row.a{
-      background: #FFF;
-    }
-    .row.b{
-      background: #E9EAEC;
+      border: 2px solid #E9EAEC;
     }
     .row .row_text{
       font-size: 15px;
@@ -1122,6 +1111,31 @@ tbody{
     }
     .btn.cancel{
       background: #EE4C69;
+    }
+    .sale_table{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      align-self: stretch;
+    }
+    .sale_search{
+      display: flex;
+      padding: 12px 16px;
+      align-items: center;
+      gap: 16px;
+      align-self: stretch;
+      background: #E9EAEC;
+    }
+    .sale_search_text{
+      color: #000;
+      text-align: center;
+      font-variant-numeric: lining-nums tabular-nums;
+      font-family: DM Sans;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 140%; /* 22.4px */
+      text-transform: capitalize;
     }
   }
   /*-----------------------------테블릿 end------------------------------*/
@@ -1388,12 +1402,7 @@ tbody{
       align-items: center;
       gap: 5px;
       align-self: stretch;
-    }
-    .row.a{
-      background: #FFF;
-    }
-    .row.b{
-      background: #E9EAEC;
+      border: 2px solid #E9EAEC;
     }
     .row .row_text{
       font-size: 8px;
@@ -1610,6 +1619,30 @@ tbody{
     .btn.cancel{
       background: #EE4C69;
     }
-
+    .sale_table{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      align-self: stretch;
+    }
+    .sale_search{
+      display: flex;
+      padding: 12px 16px;
+      align-items: center;
+      gap: 10px;
+      align-self: stretch;
+      background: #E9EAEC;
+    }
+    .sale_search_text{
+      color: #000;
+      text-align: center;
+      font-variant-numeric: lining-nums tabular-nums;
+      font-family: DM Sans;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 140%; /* 22.4px */
+      text-transform: capitalize;
+    }
   }
   
