--- a/admin/views/client_search.ejs
+++ b/admin/views/client_search.ejs
@@ -44,19 +44,24 @@
                 </svg>
                   <a href="/admin/prog_manage" class="menu_text">프로그램 관리</a>
               </div>
+              <div class="menu_box">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                  <path d="M1.48022 0.680176C1.06022 0.680176 0.730225 1.12018 0.730225 1.68018V4.68018H24.7302V1.68018C24.7302 1.12018 24.4002 0.680176 23.9802 0.680176H1.48022ZM0.730225 8.68018V23.6802C0.730225 24.2402 1.06022 24.6802 1.48022 24.6802H23.9802C24.4002 24.6802 24.7302 24.2402 24.7302 23.6802V8.68018H0.730225ZM3.73022 16.6802H6.73022V20.6802H3.73022V16.6802ZM9.73022 16.6802H12.7302V20.6802H9.73022V16.6802Z" fill="#9A9A9A"/>
+                </svg>
+                  <a href="/admin/sale_manage" class="menu_text">매출 관리</a>
+              </div>
             </div>
           </div>
         </div>
         <div class="header">
           <span class="header_text">Lemon Tree</span>
           <div class="search-box">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+            <form action="/admin/client_list/search" method="get" style="display: flex;justify-content: space-between; min-width: 50px;"id="searchForm2">
+              <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="tablet_searchOnEnter(event)">
+            </form>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" id="searchIcon2">
+              <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <form action="/admin/client_list/client_search" method="get" style="display: flex;justify-content: space-between; min-width: 50px;">
-                <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="tablet_searchOnEnter(event)">
-                <input type="submit" value="검색" class="searchBtn">
-              </form>
         </div>        
         </div>
         <div class="menu_bar">
@@ -69,14 +74,13 @@
           <div class="table_title">
             <span class="table_title_text">회원목록</span>
             <div class="search-box">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <form action="/admin/client_list/client_search" method="get" style="display: flex;justify-content: space-between; min-width: 380px;">
-                    <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnter(event)">
-                    <input type="submit" value="검색" class="searchBtn">
-                  </form>
-            </div>
+              <form action="/admin/client_list/search" method="get" style="display: flex;justify-content: space-between; min-width: 380px;"id="searchForm">
+                <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnter(event)">
+              </form>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" id="searchIcon">
+                <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+          </div>
           </div>
           <table class="table a">
             <thead class="table_content a">   
@@ -106,7 +110,7 @@
             <ul class="pagination-list">
                 <% for (let page = 1; page <= totalPages; page++) { %>
                     <li class="pagination-item">
-                        <a href="/admin/client_list/client_search?page=<%= page %>&searchData=<%= encodeURIComponent(searchData) %>" class="pagination-link <%= encodeURIComponent(page) === currentPage ? 'active' : '' %>"><%= page %></a>
+                        <a href="/admin/client_list/search?page=<%= page %>&searchData=<%= encodeURIComponent(searchData) %>" class="pagination-link <%= encodeURIComponent(page) === currentPage ? 'active' : '' %>"><%= page %></a>
                     </li>
                 <% } %>
             </ul>                
