--- a/admin/views/main.ejs
+++ b/admin/views/main.ejs
@@ -43,6 +43,12 @@
                 </svg>
                   <a href="/admin/prog_manage" class="menu_text">프로그램 관리</a>
               </div>
+              <div class="menu_box">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                  <path d="M1.48022 0.680176C1.06022 0.680176 0.730225 1.12018 0.730225 1.68018V4.68018H24.7302V1.68018C24.7302 1.12018 24.4002 0.680176 23.9802 0.680176H1.48022ZM0.730225 8.68018V23.6802C0.730225 24.2402 1.06022 24.6802 1.48022 24.6802H23.9802C24.4002 24.6802 24.7302 24.2402 24.7302 23.6802V8.68018H0.730225ZM3.73022 16.6802H6.73022V20.6802H3.73022V16.6802ZM9.73022 16.6802H12.7302V20.6802H9.73022V16.6802Z" fill="#9A9A9A"/>
+                </svg>
+                  <a href="/admin/sale_manage" class="menu_text">매출 관리</a>
+              </div>
             </div>
           </div>
         </div>
@@ -326,7 +332,7 @@
             </div>
           </div>
           <div class="modal_footer">
-            <span class="btn modify" onclick="modifyBtn()">수정</span>
+            <span class="btn modify" onclick="modifyBtn()" style="display: none;">수정</span>
             <span class="btn pay" onclick="paymentBtn()">결제</span>
             <span class="btn cancel" onclick="cancelBtn()">예약취소</span>
           </div>
