--- a/admin/views/search.ejs
+++ b/admin/views/search.ejs
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>예약 관리</title>
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-    
+    <link rel="stylesheet" type="text/css" href="/styles.css"> 
 </head>
 <body>
     <div class="manage_main">
@@ -44,20 +43,25 @@
                 </svg>
                   <a href="/admin/prog_manage" class="menu_text">프로그램 관리</a>
               </div>
+              <div class="menu_box">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                  <path d="M1.48022 0.680176C1.06022 0.680176 0.730225 1.12018 0.730225 1.68018V4.68018H24.7302V1.68018C24.7302 1.12018 24.4002 0.680176 23.9802 0.680176H1.48022ZM0.730225 8.68018V23.6802C0.730225 24.2402 1.06022 24.6802 1.48022 24.6802H23.9802C24.4002 24.6802 24.7302 24.2402 24.7302 23.6802V8.68018H0.730225ZM3.73022 16.6802H6.73022V20.6802H3.73022V16.6802ZM9.73022 16.6802H12.7302V20.6802H9.73022V16.6802Z" fill="#9A9A9A"/>
+                </svg>
+                  <a href="/admin/sale_manage" class="menu_text">매출 관리</a>
+              </div>
             </div>
           </div>
         </div>
         <div class="header">
           <span class="header_text">Lemon Tree</span>
-          <div class="search-box">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            <form action="/admin/reservation_manage/search" method="get" style="display: flex;justify-content: space-between; min-width: 50px;">
-                <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnterTablet(event)">
-                <input type="submit" value="검색">
+          <div class="search-box" >
+            <form action="/admin/reservation_manage/search" method="get" style="display: flex;justify-content: space-between; min-width: 50px;" id="searchForm2">
+              <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnterTablet(event)">                    
             </form>
-        </div>        
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 20 20" fill="none" id="searchIcon2">
+              <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>       
         </div>
         <div class="menu_bar">
           <div class="main_page"><a href="/admin/main" class="menu_text">메인</a></div>
@@ -68,15 +72,14 @@
         <div class="main">
           <div class="table_title">
             <span class="table_title_text">예약관리</span>
-            <div class="search-box">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <form action="/admin/reservation_manage/search" method="get" style="display: flex;justify-content: space-between; min-width: 380px;">
-                    <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnter(event)">
-                    <input type="submit" value="검색">
-                </form>
-            </div>
+            <div class="search-box" >
+              <form action="/admin/reservation_manage/search" method="get" style="display: flex;justify-content: space-between; min-width: 380px;" id="searchForm">
+                <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnter(event)">                    
+              </form>
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 20 20" fill="none" id="searchIcon">
+                <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+          </div>
           </div>
           <table class="table a">
               <thead class="table_content a">
@@ -131,7 +134,7 @@
           <div class="modal_header">
             <span class="modal_header_title">예약 상세정보</span>
             <div class="confirm_btn" data-action="">
-              <span class="confirm_btn_text">확정</span>
+              <span class="confirm_btn_text" onclick="confirmBtn()">확정</span>
             </div>
           </div>
           <div class="modal_main">
@@ -141,41 +144,41 @@
               <span class="client info_title">예약자 정보</span>
               <div class="info_box name">
                 <span class="box_name">이름</span>
-                <input type="text" name="" class="inputbox name">
+                <input type="text" name="name" class="inputbox name" readonly>
               </div>
               <div class="info_box number">
                 <span class="box_name">번호</span>
-                <input type="text" name="" class="inputbox number">
+                <input type="text" name="phone" class="inputbox number" readonly>
               </div>
               <div class="info_box sex">
                 <span class="box_name">성별</span>
-                <input type="text" name="" class="inputbox sex">
+                <input type="text" name="gender" class="inputbox sex" readonly>
               </div>
               <div class="info_box note">
                 <span class= "box_name">비고</span>
-                <textarea name="" class="inputbox note"></textarea>
+                <textarea name="note" class="inputbox note"></textarea>
               </div>
             </div>
             <div class="reserv info">
               <span class="reserv info_title">예약 정보</span>
               <div class="info_box date">
                 <span class="box_name">예약날짜</span>
-                <input type="text" name="reservation_date" class="inputbox date" style="border-right: solid 1px #E9EAEC;">
-                <input type="text" name="prog_time" class="inputbox time">
+                <input type="text" name="reservation_date" class="inputbox date" style="border-right: solid 1px #E9EAEC;" readonly>
+                <input type="text" name="reservation_time" class="inputbox time" readonly>
               </div>
               <div class="info_box prog">
                 <span class="box_name">프로그램</span>
-                <input type="text" name="" class="inputbox prog">
+                <input type="text" name="prog_name" class="inputbox prog" readonly>
               </div>
               <span class="fare info_title">요금 정보</span>
               <div class="info_box fare">
                 <div class="fare_content">
                   <span class="fare_box">횟수</span>
-                  <input type="text" name="" class="inputbox count" readonly>
+                  <input type="text" name="remain_count" class="inputbox count" readonly>
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">재학생</span>
-                  <input type="text" name="" class="inputbox std">
+                  <input type="text" name="std" class="inputbox std">
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">정상가</span>
@@ -183,15 +186,15 @@
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">할인가</span>
-                  <input type="text" name="discount" class="inputbox discount" readonly>
+                  <input type="text" name="discount" class="inputbox discount">
                 </div>
               </div>
             </div>
           </div>
           <div class="modal_footer">
-            <span class="btn modify" data-action="">수정</span>
-            <span class="btn pay" data-action="">결제</span>
-            <span class="btn cancel" data-action="">예약 취소</span>
+            <span class="btn modify" onclick="modifyBtn()" style="display: none;">수정</span>
+            <span class="btn pay" onclick="paymentBtn()">결제</span>
+            <span class="btn cancel" onclick="cancelBtn()">예약취소</span>
           </div>
         </div>
       </div>
