--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -1446,10 +1446,16 @@ tbody{
       background-color: white;
       z-index: 2; /* 모달 배경 위에 위치하도록 설정 */
       /* 나머지 모달 스타일링 */
+      /* 모바일 크기에서 적용되는 스타일 */
+      @media (max-width: 767px) {
+        width: 90%; /* 모달의 너비를 화면 너비의 90%로 설정 */
+        height: auto; /* 모달의 높이를 자동으로 설정 */
+        max-width: 320px; /* 모달의 최대 너비를 지정 */
+    }
     }
     .info_modal{
       display: flex;
-      width: 600px;
+      max-width: 600px;
       height: 600px;
       flex-direction: column;
       justify-content: center;
@@ -1476,7 +1482,7 @@ tbody{
       color: #FFF;
       text-align: center;
       font-family: DM Sans;
-      font-size: 20px;
+      font-size: 15px;
       font-style: normal;
       font-weight: 500;
       line-height: normal;
@@ -1484,10 +1490,10 @@ tbody{
     }
     .confirm_btn_text{
       color: #FFF;
-      font-size: 20px;
+      font-size: 15px;
       display: flex;
       width: 60px;
-      padding: 10px 0px;
+      padding: 15px 0px;
       justify-content: center;
       align-items: center;
       align-self: stretch;
@@ -1505,9 +1511,9 @@ tbody{
     }
     .info{
       display: flex;
-      min-width: 300px;
+      min-width: 200px;
       max-width: 600px;
-      padding: 10px 25px;
+      padding: 10px 10px;
       flex-direction: column;
       align-items: flex-start;
       gap: 5px;
@@ -1561,7 +1567,7 @@ tbody{
       width: 50px;
       justify-content: center;
       align-items: center;
-      font-size: 10px;
+      font-size: 9px;
       font-weight: 700;
     }
     .box_name.prog{
@@ -1579,14 +1585,22 @@ tbody{
     }
     .info_box.note .box_name{
       height: 20px;
-      width: 550px;
+      width: 300px;
       font-size: 13px;      
     }
+    /* 320px 모바일 화면에서 크기 조정 */
+@media (max-width: 320px) {
+  .info_box.note .box_name {
+      width: 100%; /* 너비를 100%로 설정하여 화면 가로폭에 맞게 조정 */
+      font-size: 12px; /* 폰트 크기를 조정 */
+  }
+}
+    
     .inputbox{
-      width: 500px;
+      width: 100px;
     }
     .inputbox.note{
-      width: 540px;
+      width: 100px;
       height: 125px;
       vertical-align: top;
     }
